--- a/css/cbt.css
+++ b/css/cbt.css
@@ -14,6 +14,7 @@ body {
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
             text-align: center;
+            margin-bottom: 200px;
         }
 
         .header {
@@ -395,7 +396,15 @@ li.selected {
         bottom: calc(20px + 50px); /* Pastikan tombol berada di atas footer */
     }
 }
-
+.container {
+    max-width: 600px;
+    margin: auto;
+    padding: 40px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
 
 
 
