--- a/css/cbt.css
+++ b/css/cbt.css
@@ -2,7 +2,7 @@ body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background: url('https://patalan.bantulkab.go.id/assets/files/artikel/sedang_1554438091Logo%20Kabupaten%20Bantul.jpg') no-repeat center center fixed;
+            background: url('https://raw.githubusercontent.com/YohanesUser/galeri/8a8beafbaa5b8a30a4b265ccccf7613f024fa3d0/OIP.svg') no-repeat center center fixed;
             background-size: cover;
         }
 
